Fixes minor alignment on home page  mobile view

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -804,7 +804,8 @@ table {
   background-color: #1e2b3a;
   @media (max-width: 550px){
     gap: 5vw;
-    justify-content: center;
+    /* justify-content: center; */
+    flex-direction: column;
   }
 }
 
@@ -836,19 +837,17 @@ table {
 
 .spacer {
   width: 15vw;
-  @media (max-width:475px){
-    width: 10vw;
-  }
-  @media (max-width: 350px){
-    width: 0px;
+  @media (max-width:550px){
+    width: 0;
   }
 }
 
 .footer-text {
   color:#cad1ce;
-  @media (max-width: 400px){
-    margin-right: 15w;
+  @media (max-width: 550px){
+    margin-bottom: 20px;
     width: 50vw;
+    text-align: center;
   }
 }
 
